# kcptun-rs

./: .gitignore  AGENTS.md  BUGREPORT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DISCLAIMER.md  DISCLAIMER.zh.md  Makefile  PERF_OPTIMIZATION_PLAN.md  README.md  README.zh.md  apply_client_patch.py  bench_results.json  bench_rust_vs_go.py  test_e2e.sh
.cargo/: AGENTS.md  config.toml
.claude/skills/agents-md-orient/: SKILL.md
.claude/skills/flamegraph-perf/: SKILL.md
.claude/skills/superpowers-sync/: SKILL.md
bench/: AGENTS.md  PROFILE_RUNBOOK.md  kcptun_prof_wl.rs  profile_flamegraph.sh  profile_go_pprof.sh  profile_rust_go_pprof.sh  run_bench.sh  symbolicate_profile.py  throughput.py
bench/profiles/: HOTSPOTS.md  README.md
bugs/: BUGREPORT_FEC_SEND_STUB.md  BUGREPORT_NO_RECONNECT_ON_SERVER_RESTART.md  BUGREPORT_PROXY_MEMORY_GROWTH.md
docs/: RUST_IDIOMS_MIGRATION.md
docs/superpowers/plans/: 2026-07-21-flamegraph-perf.md  2026-07-22-acknodelay-fec-optimization-done.md  2026-07-22-hotpath-is-closed-mutex-regression-done.md  2026-07-22-smux-stream-leak-fix.md  inbound-cfb-null-less-copy.md
docs/superpowers/specs/: 2026-07-21-flamegraph-perf-design.md  2026-07-22-all-cipher-comp-flamegraph-analysis.md  2026-07-22-hotpath-is-closed-mutex-regression.md  2026-07-22-smux-stream-leak-fix.md
kcp-rs/: AGENTS.md  Cargo.toml
kcp-rs/src/: crypto_buf.rs  fec.rs  kcp.rs  lib.rs  segment.rs  session.rs  snmp.rs
kcptun-client/: AGENTS.md  Cargo.toml  build.rs
kcptun-client/src/: main.rs
kcptun-server/: AGENTS.md  Cargo.toml
kcptun-server/src/: main.rs
kcptun-server/tests/: AGENTS.md  reconnect_test.rs  stress_test.rs
kcrypt-rs/: AGENTS.md  Cargo.toml
kcrypt-rs/src/: cast5.rs  crypt.rs  des.rs  lib.rs
kcrypt-rs/src/crypt/: AGENTS.md  aes_cfb.rs  aes_gcm.rs  blowfish.rs  cast5_crypt.rs  none.rs  salsa20.rs  sm4.rs  tea.rs  triple_des.rs  twofish.rs  xor.rs  xtea.rs
kio-rs/: AGENTS.md  Cargo.toml  build.rs
kio-rs/src/: lib.rs  tests.rs
kio-rs/src/net/: AGENTS.md  mmsg.rs  mod.rs  smol.rs  tokio.rs
kio-rs/src/sync/: AGENTS.md  mod.rs  smol.rs  tokio.rs
kio-rs/src/task/: AGENTS.md  mod.rs  smol.rs  tokio.rs
kio-rs/src/time/: AGENTS.md  mod.rs  smol.rs  tokio.rs
kpprof-rs/: Cargo.toml
kpprof-rs/src/: deadlock.rs  heap.rs  lib.rs
qpp-rs/: AGENTS.md  Cargo.toml
qpp-rs/src/: lib.rs
smux-rs/: AGENTS.md  Cargo.toml
smux-rs/src/: frame.rs  lib.rs  session.rs  stream.rs
tests/: AGENTS.md
tests/kcptun-go/: AGENTS.md  README.md  go.mod
