[package]
name = "kcptun-client"
version = "0.1.0"
edition = "2021"
description = "kcptun client binary"

[dependencies]
kcp-rs = { path = "../kcp-rs" }
kcrypt-rs = { path = "../kcrypt-rs" }
smux-rs = { path = "../smux-rs", default-features = false }
qpp-rs = { path = "../qpp-rs" }
kio-rs = { path = "../kio-rs", default-features = false }
clap = { version = "4", default-features = false, features = ["derive", "env", "std", "help", "usage", "error-context"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["humantime"] }
anyhow = "1"
bytes = "1"
snap = "1"
pbkdf2 = "0.12"
sha1 = "0.10"
parking_lot = "0.12"
crc32fast = "1"
socket2 = "0.5"
mimalloc = { version = "0.1", default-features = false }
pprof = { version = "0.15", optional = true, default-features = false, features = ["protobuf-codec"] }

[features]
default = ["tokio"]
# Optional CPU profiler HTTP endpoint (--pprof). Off by default to keep ARM bins small.
pprof = ["dep:pprof"]
tokio = ["kio-rs/tokio", "smux-rs/tokio"]
smol = ["kio-rs/smol", "smux-rs/smol"]

[[bin]]
name = "kcptun-client"
path = "src/main.rs"
