[package]
name = "kcrypt-rs"
version = "0.1.0"
edition = "2021"
description = "Shared block/AEAD cipher library for kcptun-rs (Go kcp-go wire-compatible)"

[dependencies]
bytes = "1"
aes = "0.8"
sha1 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
twofish = "0.7"
blowfish = "0.9"
des = "0.8"
aes-gcm = "0.10"
